# hilbertmodgroup

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .relint.yaml  CHANGELOG.md  Dockerfile  Dockerfile.passagemath  MANIFEST.in  Makefile  README.md  _doctest_environment.py  entrypoint-passagemath.sh  entrypoint.sh  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-image.yml  publish.yml  test-publish.yml
examples/: Examples.ipynb  ExamplesK1.ipynb  ExamplesK2.ipynb  ExamplesK3.ipynb  ExamplesK4.ipynb  plot.py
examples_extended/: Ext_Exam17_and_19.ipynb  Ext_Example22.ipynb  Ext_Example23.ipynb  Ext_Example24.ipynb  Ext_Example25.ipynb  other_exm1.ipynb  other_exm2.ipynb  other_exm3.ipynb  other_exm4.ipynb  other_exm5.ipynb  other_exm6.ipynb
src/hilbert_modgroup/: __init__.py  all.py  hilbert_modular_group_class.py  hilbert_modular_group_element.pyx  plot.py  pullback.py  pullback_cython.pyx  upper_half_plane.pxd  upper_half_plane.pyx  utils.py
src/hilbert_modgroup/extended/: all.py  cusp.py  group_class.py  group_element.pyx  pullback.py  pullback_cython.pyx
