[build-system]
requires = [
    "setuptools>=49.6.0",
    "cython>=3.0.8,<3.1.0",
    "setuptools_scm[toml]>=6.2",
    "passagemath-environment",
    "passagemath-flint",
    "passagemath-modules",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/hilbert_modgroup/version.py"
git_describe_command = "git describe --tags --long --match *.*"